refac(doc): #3376 fix-broken-links
- Fixing some broken links on Blog posts and Security section.


Former-commit-id: 89c059fa1b1d178c1c8322af82f80d1d8d93a64f

--- a/content/blog/cost-cybercrime-i/index.adoc
+++ b/content/blog/cost-cybercrime-i/index.adoc
@@ -183,4 +183,4 @@ In an upcoming post, we will continue discussing some other frauds
 studied by this remarkable group of cybersecurity researchers.
 
 We hope you enjoy reading this post! Want to say something?
-#link:../web/contact-us/[Do get in touch with us!]#
+#link:../../contact-us/[Do get in touch with us!]#
