--- a/content/pages/people/aroldan/index.adoc
+++ b/content/pages/people/aroldan/index.adoc
@@ -1,5 +1,6 @@
 :slug: people/aroldan/
 :category: people
+:peoplepage: yes
 :description: Fluid Attacks is a company focused on ethical hacking and pentesting in applications with over 18 year of experience providing our services to the Colombian market. The purpose of this page is to present a small overview about the experience, education and achievements of Andres Roldan.
 :keywords: Fluid Attacks, Team, People, Members, Andres, Roldan.
 
