feat(front): #3365 add button to asserts page
Former-commit-id: eac8369bcb27e2631002b87ddf50eb318fa100e6

--- a/new/content/pages/asserts/index.adoc
+++ b/new/content/pages/asserts/index.adoc
@@ -40,3 +40,5 @@ and enforce them across your software life cycle;
 - recognize the exact moment a vulnerability appeared
 (for every vulnerability check, *Asserts* prints the `ToE` fingerprint);
 - have an interactive cycle of vulnerability closing.
+
+[button-asserts]#link:https://fluidattacks.com/asserts/[Read API Documentation]#
