feat(doc): #2994.166 add refs to some rules
- Added ASVS reference to R238, R266, R320 and R324
- Added CWE reference to R040


Former-commit-id: 2b54bcec6b6a5f435639050453bb10f3c018b8e6

--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -67,6 +67,12 @@ servers, and serverless functions enforce access controls.
 Never enforce access controls on the client.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V4.1 General Access Control Design.(4.1.1)]
+Verify that the application enforces access control rules on a trusted service
+layer,
+especially if client-side access control is present and could be bypassed.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.3)]
 Verify that old versions of SSL and TLS protocols, algorithms, ciphers, and
 configuration are disabled,
