refac(doc): #3382 faq-change-texts
- Main text on faq section was modified.


Former-commit-id: 433c2e3925323334ce3ea817b3d15a53240f6af6

--- a/new/content/pages/faq/index.adoc
+++ b/new/content/pages/faq/index.adoc
@@ -4,8 +4,8 @@
 
 = Frequently Asked Questions (FAQ)
 
-Frequently asked questions about our services can be found link:../faq/clients/[*here*].
+Frequently asked questions about `Fluid Attacks'` products and solutions
+can be found link:../faq/clients/[*here*].
 
-If you have questions about `Fluid Attacks` products or the selection process,
-please read through the `FAQ` list.
-You might find the answer to your question link:../careers/faq/[*here*]
+If you have questions about `Fluid Attacks'` selection process,
+you might find the answers link:../careers/faq/[*here*].
