fix(front): #3385 fix broken images
Former-commit-id: 036881cf084488f7a4358c7fdf8fd3a67f2a0a50

--- a/content/blog/crash-course-machine-learning/index.adoc
+++ b/content/blog/crash-course-machine-learning/index.adoc
@@ -81,7 +81,7 @@ finding a lower-dimensional representation of our inputs
 (*dimensionality reduction*):
 
 .Dimensionality reduction.
-image::dim-reduction[width="60%",alt="Dimensionality reduction"]
+image::dim-reduction.png[width="60%",alt="Dimensionality reduction"]
 
 With these _classifications_ out of the way,
 let's go deeper into each particular technique
